# TabNews-Kivy

./: .gitignore  README.md  compile_app.py  custom_reloader.py  pyproject.toml  run_app.py  send_app_to_phone.py
app/: buildozer.spec  custom_reloader.py  main.py  send_app_to_phone.py
app/screens/: main_screen.kv  main_screen.py  post_screen.kv  post_screen.py
