[tool.poetry]
name = "tabnews-kivy"
version = "0.1.0"
description = "A cross-platform client for tabnews.com.br made with Kivy"
authors = ["Filipe Marchesini <filipe.marchesini@gmail.com>"]
readme = "README.md"
packages = [{include = "tabnews_kivy"}]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.22.0"
kivy = "^2.1.0"
buildozer = {url = "https://github.com/kivy/buildozer/archive/master.zip"}
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
pydantic = "^1.10.2"
asks = "^3.0.0"


[tool.poetry.group.dev.dependencies]
Cython = "^0.29.32"
icecream = "^2.1.3"
kaki = "^0.1.5"
black = "^22.10.0"
plyer = "^2.1.0"
psutil = "^5.9.4"
pytest = "^7.2.0"
faker = "^15.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
